--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -1,4 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@Html.DevExpress().GetStyleSheets(
+    new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.HtmlEditor, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.PivotGrid, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.Chart, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.Report, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.Scheduler, Theme = "Moderno" },
+    new StyleSheet { ExtensionSuite = ExtensionSuite.TreeList, Theme = "Moderno" }
+)
+<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
