--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/EditarPedido.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/EditarPedido.cshtml
@@ -67,7 +67,7 @@
                                             <div class="row clearfix">
                                                 <div class="col-sm-3">
                                                     <b>Pedido:</b>
-                                                    @Html.LabelFor(model => model.NumPedido, new { @class = "form-control" })
+                                                    @Html.LabelFor(model => model.IdPedido, new { @class = "form-control" })
                                                 </div>
                                                 <div class="col-sm-3">
                                                     <b>Estatus pedido:</b>
